--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^13.11.1"
+    "@types/node": "^13.11.1",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@ledgerhq/hw-app-eth": "^5.13.0",
